--- a/EDA/epic_hemoglobin.ipynb
+++ b/EDA/epic_hemoglobin.ipynb
@@ -2141,7 +2141,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2155,9 +2155,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "b9d6008fa92329aaa11415060758284d944c2fab839fe22550f46b77738e47c9"
@@ -2165,5 +2164,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
