store data as npy

--- a/EDA/MIMIC_EDA.ipynb
+++ b/EDA/MIMIC_EDA.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "[892 rows x 9 columns]"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "280             ml  2179-10-25T17:50:00  2179-10-30T13:38:38  "
       ]
      },
-     "execution_count": 178,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
        "[520 rows x 8 columns]"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,12 +631,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "blood_transfusion_volumn = bt.totalamount.values\n",
-    "np.save('MIMIC_blood_transfusion_volumn', blood_transfusion_volumn)"
+    "# blood_transfusion_volumn = bt.totalamount.values\n",
+    "# np.save('MIMIC_blood_transfusion_volumn', blood_transfusion_volumn)"
    ]
   },
   {
