add statistical analysis

--- a/EDA/MIMIC_EDA(only fbt).ipynb
+++ b/EDA/MIMIC_EDA(only fbt).ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1199,7 +1199,7 @@
        "[234 rows x 14 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1207,6 +1207,38 @@
    "source": [
     "hemoglobin= pd.read_csv('Hemoglobin.csv')\n",
     "hemoglobin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_pre_transfusion = hemoglobin.pre_transfusion.values\n",
+    "np.save('MIMIC_first_pre_transfusion', first_pre_transfusion)\n",
+    "\n",
+    "first_pre_transfusion_male = hemoglobin.loc[hemoglobin.gender == 'M'].pre_transfusion.values\n",
+    "np.save('MIMIC_first_pre_transfusion_male', first_pre_transfusion_male)\n",
+    "\n",
+    "first_pre_transfusion_female = hemoglobin.loc[hemoglobin.gender == 'F'].pre_transfusion.values\n",
+    "np.save('MIMIC_first_pre_transfusion_female', first_pre_transfusion_female)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_first_pre_transfusion = hemoglobin.labevent_before_tranfusion_diff_min.values\n",
+    "np.save('MIMIC_time_first_pre_transfusion', time_first_pre_transfusion)\n",
+    "\n",
+    "time_first_pre_transfusion_male = hemoglobin.loc[hemoglobin.gender == 'M'].labevent_before_tranfusion_diff_min.values\n",
+    "np.save('MIMIC_time_first_pre_transfusion_male', time_first_pre_transfusion_male)\n",
+    "\n",
+    "time_first_pre_transfusion_female = hemoglobin.loc[hemoglobin.gender == 'F'].labevent_before_tranfusion_diff_min.values\n",
+    "np.save('MIMIC_time_first_pre_transfusion_female', time_first_pre_transfusion_female)"
    ]
   },
   {
