--- a/EDA/MIMIC_EDA.ipynb
+++ b/EDA/MIMIC_EDA.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "[892 rows x 9 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "280             ml  2179-10-25T17:50:00  2179-10-30T13:38:38  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
        "[520 rows x 8 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,17 +631,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "# blood_transfusion_volumn = bt.totalamount.values\n",
-    "# np.save('MIMIC_blood_transfusion_volumn', blood_transfusion_volumn)"
+    "# np.save('MIMIC_blood_transfusion_volumn', blood_transfusion_volumn)\n",
+    "\n",
+    "# blood_transfusion_volumn_male = bt.loc[bt.gender=='M'].totalamount.values\n",
+    "# np.save('MIMIC_blood_transfusion_volumn_male', blood_transfusion_volumn_male)\n",
+    "\n",
+    "# blood_transfusion_volumn_female = bt.loc[bt.gender=='F'].totalamount.values\n",
+    "# np.save('MIMIC_blood_transfusion_volumn_female', blood_transfusion_volumn_female)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +852,7 @@
        "[232 rows x 3 columns]"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,17 +865,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "# blood_transfusion_count = blood_transfusion_count.counts.values\n",
-    "# np.save('MIMIC_blood_transfusion_count', blood_transfusion_count)"
+    "# np.save('MIMIC_blood_transfusion_count', blood_transfusion_count)\n",
+    "\n",
+    "# blood_transfusion_count_male = bt.loc[bt.gender=='M'].counts.values\n",
+    "# np.save('MIMIC_blood_transfusion_count_male', blood_transfusion_count_male)\n",
+    "\n",
+    "# blood_transfusion_count_female = bt.loc[bt.gender=='F'].counts.values\n",
+    "# np.save('MIMIC_blood_transfusion_count_female', blood_transfusion_count_female)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -913,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1222,7 +1234,7 @@
        "[521 rows x 9 columns]"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1240,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1260,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1283,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1361,7 +1373,7 @@
        "448         2119-02-04T16:30:00                              270  "
       ]
      },
-     "execution_count": 192,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1379,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1395,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1412,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1423,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1627,7 +1639,7 @@
        "[520 rows x 8 columns]"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1639,17 +1651,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "pre_transfusion = pre_transfusion_pd.pre_transfusion.values\n",
-    "np.save('MIMIC_pre_transfusion', pre_transfusion)"
+    "np.save('MIMIC_pre_transfusion', pre_transfusion)\n",
+    "\n",
+    "pre_transfusion_male = pre_transfusion_pd.loc[pre_transfusion_pd.gender == 'M'].pre_transfusion.values\n",
+    "np.save('MIMIC_pre_transfusion_male', pre_transfusion_male)\n",
+    "\n",
+    "pre_transfusion_female = pre_transfusion_pd.loc[pre_transfusion_pd.gender == 'F'].pre_transfusion.values\n",
+    "np.save('MIMIC_pre_transfusion_female', pre_transfusion_female)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1681,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1733,7 +1751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1747,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1774,7 +1792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1972,7 +1990,7 @@
        "554         2123-05-09T15:15:00                               375  "
       ]
      },
-     "execution_count": 202,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1994,7 +2012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2006,7 +2024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -2075,7 +2093,7 @@
        "2153                              1703  "
       ]
      },
-     "execution_count": 204,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2086,7 +2104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2103,7 +2121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2116,7 +2134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -2393,7 +2411,7 @@
        "[518 rows x 13 columns]"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2404,7 +2422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2415,7 +2433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2447,7 +2465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -2499,7 +2517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2773,7 +2791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -3075,7 +3093,7 @@
        "[518 rows x 14 columns]"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3086,12 +3104,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pre_post_transfusion_value_diff = pre_post_transfusion.value_diff.values\n",
-    "np.save('MIMIC_value_diff', pre_post_transfusion_value_diff)"
+    "value_diff = pre_post_transfusion.value_diff.values\n",
+    "np.save('MIMIC_value_diff', value_diff)\n",
+    "\n",
+    "value_diff_male = pre_post_transfusion.loc[pre_post_transfusion.gender == 'M'].value_diff.values\n",
+    "np.save('MIMIC_value_diff_male', value_diff_male)\n",
+    "\n",
+    "value_diff_female = pre_post_transfusion.loc[pre_post_transfusion.gender == 'F'].value_diff.values\n",
+    "np.save('MIMIC_value_diff_female', value_diff_female)"
    ]
   },
   {
@@ -3485,7 +3509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -3603,24 +3627,30 @@
        "[810 rows x 3 columns]"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hemoglobin_24h_count = pd.read_csv('hemoglobin_24h_count.csv') \n",
-    "hemoglobin_24h_count"
+    "hemoglobin_24h_count_df = pd.read_csv('hemoglobin_24h_count.csv') \n",
+    "hemoglobin_24h_count_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hemoglobin_24h_Hb_count = hemoglobin_24h_count.counts.values\n",
-    "np.save('MIMIC_hemoglobin_24h_Hb_count', hemoglobin_24h_Hb_count)"
+    "hemoglobin_24h_Hb_count = hemoglobin_24h_count_df.counts.values\n",
+    "np.save('MIMIC_hemoglobin_24h_Hb_count', hemoglobin_24h_Hb_count)\n",
+    "\n",
+    "hemoglobin_24h_Hb_count_male = hemoglobin_24h_count_df.loc[hemoglobin_24h_count_df.gender == 'M'].counts.values\n",
+    "np.save('MIMIC_hemoglobin_24h_Hb_count_male', hemoglobin_24h_Hb_count_male)\n",
+    "\n",
+    "hemoglobin_24h_Hb_count_female =hemoglobin_24h_count_df.loc[hemoglobin_24h_count_df.gender == 'F'].counts.values\n",
+    "np.save('MIMIC_hemoglobin_24h_Hb_count_female', hemoglobin_24h_Hb_count_female)\n"
    ]
   },
   {
@@ -3733,7 +3763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -3758,6 +3788,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>hadm_id</th>\n",
+       "      <th>gender</th>\n",
        "      <th>icu_stay_time</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -3765,81 +3796,92 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>24302767</td>\n",
+       "      <td>F</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>21670841</td>\n",
+       "      <td>M</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>28444159</td>\n",
+       "      <td>M</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>22977945</td>\n",
+       "      <td>M</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>21056022</td>\n",
+       "      <td>M</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>805</th>\n",
        "      <td>29636680</td>\n",
+       "      <td>M</td>\n",
        "      <td>19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>806</th>\n",
        "      <td>25043633</td>\n",
+       "      <td>F</td>\n",
        "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>807</th>\n",
        "      <td>23427760</td>\n",
+       "      <td>M</td>\n",
        "      <td>22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>808</th>\n",
        "      <td>21582058</td>\n",
+       "      <td>M</td>\n",
        "      <td>25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>809</th>\n",
        "      <td>26593663</td>\n",
+       "      <td>M</td>\n",
        "      <td>45</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>810 rows × 2 columns</p>\n",
+       "<p>810 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      hadm_id  icu_stay_time\n",
-       "0    24302767              1\n",
-       "1    21670841              1\n",
-       "2    28444159              1\n",
-       "3    22977945              1\n",
-       "4    21056022              1\n",
-       "..        ...            ...\n",
-       "805  29636680             19\n",
-       "806  25043633             20\n",
-       "807  23427760             22\n",
-       "808  21582058             25\n",
-       "809  26593663             45\n",
+       "      hadm_id gender  icu_stay_time\n",
+       "0    24302767      F              1\n",
+       "1    21670841      M              1\n",
+       "2    28444159      M              1\n",
+       "3    22977945      M              1\n",
+       "4    21056022      M              1\n",
+       "..        ...    ...            ...\n",
+       "805  29636680      M             19\n",
+       "806  25043633      F             20\n",
+       "807  23427760      M             22\n",
+       "808  21582058      M             25\n",
+       "809  26593663      M             45\n",
        "\n",
-       "[810 rows x 2 columns]"
+       "[810 rows x 3 columns]"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3854,12 +3896,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
     "icu_stay_time_days = icu_stay_time.icu_stay_time.values\n",
-    "np.save('MIMIC_icu_stay_time_days', icu_stay_time_days)"
+    "np.save('MIMIC_icu_stay_time_days', icu_stay_time_days)\n",
+    "\n",
+    "icu_stay_time_days_male = icu_stay_time.loc[icu_stay_time.gender =='M'].icu_stay_time.values\n",
+    "np.save('MIMIC_icu_stay_time_days_male', icu_stay_time_days)\n",
+    "\n",
+    "icu_stay_time_days_female = icu_stay_time.loc[icu_stay_time.gender =='F'].icu_stay_time.values\n",
+    "np.save('MIMIC_icu_stay_time_days_female', icu_stay_time_days_female)"
    ]
   },
   {
