fix epic icu stay time

--- a/EDA/EPIC EDA debug.ipynb
+++ b/EDA/EPIC EDA debug.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -62,12 +62,209 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_transfusions = pd.merge(df_transfusions,df_patients[[\"PATIENT_NUMBER\",\"Gender\"]], on=[\"PATIENT_NUMBER\"],how = \"inner\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TRANSFUSION_NUMBER</th>\n",
+       "      <th>PATIENT_NUMBER</th>\n",
+       "      <th>ADMISSION_NUMBER</th>\n",
+       "      <th>VOLUME</th>\n",
+       "      <th>BLOOD_START_TIME</th>\n",
+       "      <th>BLOOD_END_TIME</th>\n",
+       "      <th>Gender</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>210</td>\n",
+       "      <td>121</td>\n",
+       "      <td>246.97</td>\n",
+       "      <td>2021-12-19 12:01:00</td>\n",
+       "      <td>2021-12-19 16:00:00</td>\n",
+       "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>256</td>\n",
+       "      <td>210</td>\n",
+       "      <td>121</td>\n",
+       "      <td>267.00</td>\n",
+       "      <td>2021-12-16 15:11:00</td>\n",
+       "      <td>2021-12-16 15:16:00</td>\n",
+       "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>123</td>\n",
+       "      <td>143</td>\n",
+       "      <td>286.00</td>\n",
+       "      <td>2021-07-02 16:18:00</td>\n",
+       "      <td>2021-07-02 16:23:00</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>19</td>\n",
+       "      <td>123</td>\n",
+       "      <td>143</td>\n",
+       "      <td>258.00</td>\n",
+       "      <td>2021-07-02 05:51:00</td>\n",
+       "      <td>2021-07-02 06:15:00</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>22</td>\n",
+       "      <td>123</td>\n",
+       "      <td>143</td>\n",
+       "      <td>250.00</td>\n",
+       "      <td>2021-07-01 22:51:00</td>\n",
+       "      <td>2021-07-01 22:56:00</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>247</th>\n",
+       "      <td>176</td>\n",
+       "      <td>255</td>\n",
+       "      <td>91</td>\n",
+       "      <td>332.00</td>\n",
+       "      <td>2022-03-30 01:25:00</td>\n",
+       "      <td>2022-03-30 03:24:00</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>248</th>\n",
+       "      <td>182</td>\n",
+       "      <td>30</td>\n",
+       "      <td>54</td>\n",
+       "      <td>272.00</td>\n",
+       "      <td>2022-07-21 11:54:00</td>\n",
+       "      <td>2022-07-21 11:59:00</td>\n",
+       "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>249</th>\n",
+       "      <td>195</td>\n",
+       "      <td>30</td>\n",
+       "      <td>54</td>\n",
+       "      <td>323.63</td>\n",
+       "      <td>2022-07-23 12:42:00</td>\n",
+       "      <td>2022-07-23 16:27:00</td>\n",
+       "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>250</th>\n",
+       "      <td>185</td>\n",
+       "      <td>135</td>\n",
+       "      <td>172</td>\n",
+       "      <td>382.00</td>\n",
+       "      <td>2022-04-08 03:49:00</td>\n",
+       "      <td>2022-04-19 07:37:00</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>251</th>\n",
+       "      <td>219</td>\n",
+       "      <td>32</td>\n",
+       "      <td>174</td>\n",
+       "      <td>250.00</td>\n",
+       "      <td>2022-03-04 02:00:00</td>\n",
+       "      <td>2022-03-04 04:00:00</td>\n",
+       "      <td>F</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>252 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     TRANSFUSION_NUMBER  PATIENT_NUMBER  ADMISSION_NUMBER  VOLUME  \\\n",
+       "0                     1             210               121  246.97   \n",
+       "1                   256             210               121  267.00   \n",
+       "2                     2             123               143  286.00   \n",
+       "3                    19             123               143  258.00   \n",
+       "4                    22             123               143  250.00   \n",
+       "..                  ...             ...               ...     ...   \n",
+       "247                 176             255                91  332.00   \n",
+       "248                 182              30                54  272.00   \n",
+       "249                 195              30                54  323.63   \n",
+       "250                 185             135               172  382.00   \n",
+       "251                 219              32               174  250.00   \n",
+       "\n",
+       "       BLOOD_START_TIME      BLOOD_END_TIME Gender  \n",
+       "0   2021-12-19 12:01:00 2021-12-19 16:00:00      F  \n",
+       "1   2021-12-16 15:11:00 2021-12-16 15:16:00      F  \n",
+       "2   2021-07-02 16:18:00 2021-07-02 16:23:00      M  \n",
+       "3   2021-07-02 05:51:00 2021-07-02 06:15:00      M  \n",
+       "4   2021-07-01 22:51:00 2021-07-01 22:56:00      M  \n",
+       "..                  ...                 ...    ...  \n",
+       "247 2022-03-30 01:25:00 2022-03-30 03:24:00      M  \n",
+       "248 2022-07-21 11:54:00 2022-07-21 11:59:00      F  \n",
+       "249 2022-07-23 12:42:00 2022-07-23 16:27:00      F  \n",
+       "250 2022-04-08 03:49:00 2022-04-19 07:37:00      M  \n",
+       "251 2022-03-04 02:00:00 2022-03-04 04:00:00      F  \n",
+       "\n",
+       "[252 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_transfusions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
