--- a/EDA/EPIC EDA debug_changed.ipynb
+++ b/EDA/EPIC EDA debug_changed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "[252 rows x 8 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
        "65"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
        "[65 rows x 3 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,23 +471,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# first_blood_transfusion_volumn = first_transfusion.VOLUME.values\n",
-    "# np.save('EPIC_first_blood_transfusion_volumn', first_blood_transfusion_volumn)\n",
+    "first_blood_transfusion_volumn = first_transfusion.VOLUME.values\n",
+    "np.save('EPIC_first_blood_transfusion_volumn', first_blood_transfusion_volumn)\n",
     "\n",
-    "# first_blood_transfusion_volumn_male = first_transfusion.loc[first_transfusion.Gender=='M'].VOLUME.values\n",
-    "# np.save('EPIC_blood_transfusion_volumn_male', first_blood_transfusion_volumn_male)\n",
+    "first_blood_transfusion_volumn_male = first_transfusion.loc[first_transfusion.Gender=='M'].VOLUME.values\n",
+    "np.save('EPIC_blood_transfusion_volumn_male', first_blood_transfusion_volumn_male)\n",
     "\n",
-    "# first_blood_transfusion_volumn_female = first_transfusion.loc[first_transfusion.Gender=='F'].VOLUME.values\n",
-    "# np.save('EPIC_blood_transfusion_volumn_female', first_blood_transfusion_volumn_female)"
+    "first_blood_transfusion_volumn_female = first_transfusion.loc[first_transfusion.Gender=='F'].VOLUME.values\n",
+    "np.save('EPIC_blood_transfusion_volumn_female', first_blood_transfusion_volumn_female)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
        "[65 rows x 4 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +751,7 @@
        "291.03061538461543"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 45,
    "metadata": {
     "scrolled": true
    },
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,17 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pre_post_transfusion_value_diff = df_transfusions_merged.hb_diff.values\n",
-    "# np.save('EPIC_value_diff', pre_post_transfusion_value_diff)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1035,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1047,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1065,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1110,7 +1100,7 @@
        "129.33846153846153"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1121,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1283,7 +1273,7 @@
        "[65 rows x 4 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1294,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1310,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1333,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1358,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1377,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1394,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 65,
    "metadata": {
     "scrolled": true
    },
@@ -1420,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 66,
    "metadata": {
     "scrolled": true
    },
@@ -1447,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1638,7 +1628,7 @@
        "[177 rows x 8 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1650,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1666,7 +1656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1682,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
