Mann-Whitney U test for blood transfusion volume

--- a/EDA/Statistical analysis.ipynb
+++ b/EDA/Statistical analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,93 +593,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test statistics is 293.10039787798405 with degree of freedom as 69 and p value is 2.1056045684382066e-29\n"
-     ]
+     "data": {
+      "text/plain": [
+       "MannwhitneyuResult(statistic=12255.0, pvalue=1.9683272930899208e-16)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "MIMIC_first_blood_transfusion_volumn = np.load('Analysis data/MIMIC_first_blood_transfusion_volumn.npy')\n",
     "EPIC_first_blood_transfusion_volumn = np.load('Analysis data/EPIC_first_blood_transfusion_volumn.npy')\n",
-    "chi_square_test(MIMIC_first_blood_transfusion_volumn,EPIC_first_blood_transfusion_volumn)"
+    "mannwhitneyu(MIMIC_first_blood_transfusion_volumn,EPIC_first_blood_transfusion_volumn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test statistics is 43.63381438894149 with degree of freedom as 24 and p value is 0.008412754355844314\n"
-     ]
+     "data": {
+      "text/plain": [
+       "MannwhitneyuResult(statistic=28271.5, pvalue=0.0011770802316887145)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "MIMIC_blood_transfusion_volumn_male = np.load('Analysis data/MIMIC_blood_transfusion_volumn_male.npy')\n",
     "MIMIC_blood_transfusion_volumn_female = np.load('Analysis data/MIMIC_blood_transfusion_volumn_female.npy')\n",
-    "chi_square_test(MIMIC_blood_transfusion_volumn_male,MIMIC_blood_transfusion_volumn_female)"
+    "mannwhitneyu(MIMIC_blood_transfusion_volumn_male,MIMIC_blood_transfusion_volumn_female)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test statistics is 53.954248366013076 with degree of freedom as 51 and p value is 0.3621158753705871\n"
-     ]
+     "data": {
+      "text/plain": [
+       "MannwhitneyuResult(statistic=314.0, pvalue=0.4974891036425574)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "EPIC_blood_transfusion_volumn_male = np.load('Analysis data/EPIC_blood_transfusion_volumn_male.npy')\n",
     "EPIC_blood_transfusion_volumn_female = np.load('Analysis data/EPIC_blood_transfusion_volumn_female.npy')\n",
-    "chi_square_test(EPIC_blood_transfusion_volumn_male,EPIC_blood_transfusion_volumn_female)"
+    "mannwhitneyu(EPIC_blood_transfusion_volumn_male,EPIC_blood_transfusion_volumn_female)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test statistics is 450.9999999999999 with degree of freedom as 61 and p value is 7.272578480645389e-61\n"
-     ]
+     "data": {
+      "text/plain": [
+       "MannwhitneyuResult(statistic=16692.0, pvalue=1.7603611430947968e-16)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "chi_square_test(MIMIC_blood_transfusion_volumn_male,EPIC_blood_transfusion_volumn_male)"
+    "mannwhitneyu(MIMIC_blood_transfusion_volumn_male,EPIC_blood_transfusion_volumn_male)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test statistics is 129.620720188902 with degree of freedom as 28 and p value is 5.076201246034779e-15\n"
-     ]
+     "data": {
+      "text/plain": [
+       "MannwhitneyuResult(statistic=1323.5, pvalue=0.00022157446410042667)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "chi_square_test(MIMIC_blood_transfusion_volumn_female,EPIC_blood_transfusion_volumn_female)"
+    "mannwhitneyu(MIMIC_blood_transfusion_volumn_female,EPIC_blood_transfusion_volumn_female)"
    ]
   },
   {
